# pyasic_dashboard

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: automate_power.py  change_power.db  change_power.ipynb  example_db.ipynb  write_data.db  write_data.ipynb
pyasic_dashboard/: app.py  demo_app.py
pyasic_dashboard/db/: __init__.py  save_data.py
pyasic_dashboard/pages/: hashrate.py  status.py  temperature.py
pyasic_tools/: .env.dev  app.py  demo_app.py
pyasic_tools/db/: __init__.py  save_data.py
pyasic_tools/figs/: __init__.py
pyasic_tools/pages/: control.py  efficiency.py  hashrate.py  status.py  temperature.py
tests/: __init__.py
tests/db_tests/: __init__.py
