[tool.poetry]
name = "pyasic_tools"
version = "0.1.0"
description = "Dashboard for visualizing pyasic data"
authors = ["Wilfred Allyn <wilfredallyn@protonmail.com>"]
repository = "https://github.com/wilfredallyn/pyasic_tools"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyasic = "^0.54.1"
pandas = "^2.1"
dash-bootstrap-components = "^1.5.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
